added the DTO class for Anime and Redis caching in the project however I have not tested the redis caching till now